// Copyright 2022 Datafuse Labs.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package databend_proto;

message ShareGrantObject {
  uint64 ver = 100;
  uint64 min_reader_ver = 101;

  oneof object {
    uint64 db_id = 1;
    uint64 table_id = 2;
  }
}

message ShareGrantEntry {
  uint64 ver = 100;
  uint64 min_reader_ver = 101;

  ShareGrantObject object = 1;
  uint64 privileges = 2;
  string grant_on = 3;
  optional string update_on = 4;
}

message ShareMetaV1 {
  uint64 ver = 100;
  uint64 min_reader_ver = 101;

  optional ShareGrantEntry database = 1;
  repeated ShareGrantEntry entries = 2;
  repeated string accounts = 3;
  optional string comment = 4;
  string share_on = 5;
  optional string update_on = 6;
  repeated uint64 share_from_db_ids = 7;
}